--- a/AspNetCoreSample/RazorPageWIthEFCore/Pages/Students/Delete.cshtml
+++ b/AspNetCoreSample/RazorPageWIthEFCore/Pages/Students/Delete.cshtml
@@ -25,10 +25,10 @@
             @Html.DisplayFor(model => model.Student.FirstMidName)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Student.EnrollDate)
+            @Html.DisplayNameFor(model => model.Student.EnrollmentDate)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Student.EnrollDate)
+            @Html.DisplayFor(model => model.Student.EnrollmentDate)
         </dd>
     </dl>
     
