--- a/AspNetCoreSample/RazorPageWIthEFCore/Pages/Students/Edit.cshtml
+++ b/AspNetCoreSample/RazorPageWIthEFCore/Pages/Students/Edit.cshtml
@@ -25,9 +25,9 @@
                 <span asp-validation-for="Student.FirstMidName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Student.EnrollDate" class="control-label"></label>
-                <input asp-for="Student.EnrollDate" class="form-control" />
-                <span asp-validation-for="Student.EnrollDate" class="text-danger"></span>
+                <label asp-for="Student.EnrollmentDate" class="control-label"></label>
+                <input asp-for="Student.EnrollmentDate" class="form-control" />
+                <span asp-validation-for="Student.EnrollmentDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
