EF Core - Complex Model

--- a/AspNetCoreSample/RazorPageWIthEFCore/Pages/Students/Details.cshtml
+++ b/AspNetCoreSample/RazorPageWIthEFCore/Pages/Students/Details.cshtml
@@ -46,7 +46,7 @@
                 {
                     <tr>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Cource.Title)
+                            @Html.DisplayFor(modelItem => item.Course.Title)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Grade)
